--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,19 +1,18 @@
 <header class="header">
-  <div class="container">
-    <nav class="nav">
-      <a class="nav-logo" href="./index.html" aria-label="Site logo">
-        <svg class="nav-logo-icon" width="100" height="30">
-          <use href="{=$icon-path}"></use>
-        </svg>
+  <nav class="container nav">
+      <a href="/" class="logo">
+          Tron<span>Lab</span>
       </a>
-      <ul class="nav-list">
-        <li class="nav-item">
-          <a class="nav-link {=$highlight-act}" href="./page-2.html">Page 2</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link {=$highlight-curr}" href="./page-3.html">Page 3</a>
-        </li>
+      <ul class="nav-menu">
+          <li><a href="#hero">Главная</a></li>
+          <li><a href="#about">О платформе</a></li>
+          <li><a href="#benefits">Преимущества</a></li>
+          <li><a href="#innovations">Инновации</a></li>
+          <li><a href="#blog">Блог</a></li>
+          <li><a href="#contact" class="btn-nav">Начать</a></li>
       </ul>
-    </nav>
-  </div>
+      <button class="burger" id="burger">
+          <span></span>
+      </button>
+  </nav>
 </header>
