--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,28 +1,30 @@
 <footer class="footer">
   <div class="container footer-grid">
       <div class="footer-brand">
-          <a href="/" class="logo">Tron<span>Lab</span></a>
+          <a href="./#hero" class="logo">Tron<span>Lab</span></a>
           <p class="footer-tagline">Технологии, которые работают на вашу карьеру.</p>
       </div>
 
       <div class="footer-nav">
           <h4>Навигация</h4>
           <ul>
-              <li><a href="#hero">Главная</a></li>
-              <li><a href="#about">О платформе</a></li>
-              <li><a href="#innovations">Инновации</a></li>
+              <li><a href="./#hero">Главная</a></li>
+              <li><a href="./#about">О платформе</a></li>
+              <li><a href="./#innovations">Инновации</a></li>
           </ul>
       </div>
 
       <div class="footer-legal">
           <h4>Документы</h4>
           <ul>
-              <li><a href="privacy.html">Privacy Policy</a></li>
-              <li><a href="cookies.html">Cookies</a></li>
-              <li><a href="terms.html">Terms of Use</a></li>
-              <li><a href="disclaimer.html">Disclaimer</a></li>
-              <li><a href="contact.html">Contact</a></li>
-          </ul>
+            <li><a href="./privacy.html">Privacy Policy</a></li>
+            <li><a href="./cookies.html">Cookies Policy</a></li>
+            <li><a href="./terms.html">Terms of Use</a></li>
+            <li><a href="./return.html">Return Policy</a></li>
+            <li><a href="./disclaimer.html">Disclaimer</a></li>
+            <li><a href="./personal-data-policy.html">Personal Data Policy</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+        </ul>
       </div>
 
       <div class="footer-contacts">
