--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,15 +1,15 @@
 <header class="header">
   <nav class="container nav">
-      <a href="/" class="logo">
+      <a href="./#hero" class="logo">
           Tron<span>Lab</span>
       </a>
       <ul class="nav-menu">
-          <li><a href="#hero">Главная</a></li>
-          <li><a href="#about">О платформе</a></li>
-          <li><a href="#benefits">Преимущества</a></li>
-          <li><a href="#innovations">Инновации</a></li>
-          <li><a href="#blog">Блог</a></li>
-          <li><a href="#contact" class="btn-nav">Начать</a></li>
+          <li><a href="./#hero">Главная</a></li>
+          <li><a href="./#about">О платформе</a></li>
+          <li><a href="./#benefits">Преимущества</a></li>
+          <li><a href="./#innovations">Инновации</a></li>
+          <li><a href="./#blog">Блог</a></li>
+          <li><a href="./#contact" class="btn-nav">Начать</a></li>
       </ul>
       <button class="burger" id="burger">
           <span></span>
